fix timer spacing

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
   background-repeat: repeat-y;
   opacity: 0.4;
   width: 100%;
-  height: 100%;
+  height: 110%;
   z-index: -1;
 }
 
